--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -370,6 +370,13 @@ executable haskell-language-server
   if flag(pedantic)
     ghc-options: -Werror
   if flag(dynamic)
+  -- We want to link against the dyn rts just like official GHC binaries do;
+  --   the linked rts determines how external libs are loaded dynamically by TH.
+  -- The standard way of doing this is via the --enable-dynamic-executables Cabal option
+  -- Unfortunately it doesnt' work, see https://github.com/haskell/haskell-language-server/issues/2659
+  -- One can use --ghc-options=-dynamic but this gets applied to the dependencies as well,
+  -- which results in massive rebuilds and incompatibilities with profiling.
+  -- So instead we set the -dynamic flag diretly here.
     ghc-options: -dynamic
 
   build-depends:
