Disable dynamic on Windows

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -369,7 +369,7 @@ executable haskell-language-server
     -Wno-unticked-promoted-constructors
   if flag(pedantic)
     ghc-options: -Werror
-  if flag(dynamic)
+  if !os(windows) && flag(dynamic)
   -- We want to link against the dyn rts just like official GHC binaries do;
   --   the linked rts determines how external libs are loaded dynamically by TH.
   -- The standard way of doing this is via the --enable-dynamic-executables Cabal option
