--- a/plugins/hls-eval-plugin/hls-eval-plugin.cabal
+++ b/plugins/hls-eval-plugin/hls-eval-plugin.cabal
@@ -45,6 +45,7 @@ library
   other-modules:
     Ide.Plugin.Eval.Code
     Ide.Plugin.Eval.CodeLens
+    Ide.Plugin.Eval.Config
     Ide.Plugin.Eval.GHC
     Ide.Plugin.Eval.Parse.Comments
     Ide.Plugin.Eval.Parse.Option
@@ -105,10 +106,12 @@ test-suite tests
   build-depends:
     , aeson
     , base
+    , containers
     , directory
     , extra
     , filepath
     , hls-eval-plugin
+    , hls-plugin-api
     , hls-test-utils   ^>=1.2
     , lens
     , lsp-types
