--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -63,6 +63,10 @@ runs:
         fi
       shell: bash
 
+    # The default build for haskell-language-server executable is dynamic for linux and macOS
+    # to get a executable which works for Template Haskell
+    # However we continue providing full static executables in releases so we have to disable it
+    # *for all workflows*, including test, flags and release builds
     - name: Disable -dynamic
       run: |
         echo -e "package haskell-language-server\n  flags: -dynamic" >> cabal.project.local
