--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -442,6 +442,10 @@ executable haskell-language-server-wrapper
     , optparse-applicative
     , optparse-simple
     , process
+  if !os(windows)
+      build-depends:
+          unix
+        , containers
 
   default-language: Haskell2010
 
