Prepare 1.6.1.1 (only hackage release) (#2681)
* Disable -dynamic for all workflows

* Remove quotes

* Bump version to 1.6.1.1

* Update changelog for 1.6.1.1

* Correct flag set

* add comment to ci step

* Restore header and link

--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -63,10 +63,19 @@ runs:
         fi
       shell: bash
 
+    # The default build for haskell-language-server executable is dynamic for linux and macOS
+    # to get a executable which works for Template Haskell
+    # However we continue providing full static executables in releases so we have to disable it
+    # *for all workflows*, including test, flags and release builds
+    - name: Disable -dynamic
+      run: |
+        echo -e "package haskell-language-server\n  flags: -dynamic" >> cabal.project.local
+      shell: bash
+
     - if: inputs.os == 'Windows' && inputs.ghc == '8.8.4'
       name: (Windows,GHC 8.8) Modify `cabal.project` to workaround segfaults
       run: |
-        echo -e 'package floskell\n    ghc-options: -O0' >> cabal.project.local
+        echo -e 'package floskell\n  ghc-options: -O0' >> cabal.project.local
       shell: bash
 
     # Shorten binary names as a workaround for filepath length limits in Windows,
