--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
 
   CABAL_INSTALL_VERSION: 3.6.2.0
 
-.default_matrix: &default_matrix
+.windows_matrix: &windows_matrix
   matrix:
     - GHC_VERSION: 8.8.4
       CABAL_PROJECT: cabal.project
@@ -20,27 +20,6 @@ variables:
       CABAL_PROJECT: cabal-ghc90.project
     - GHC_VERSION: 9.2.1
       CABAL_PROJECT: cabal-ghc921.project
-
-# ghc-9.2.1 is broken for bsd
-.freebsd_matrix: &freebsd_matrix
-  matrix:
-    - GHC_VERSION: 8.8.4
-      CABAL_PROJECT: cabal.project
-    - GHC_VERSION: 8.10.7
-      CABAL_PROJECT: cabal.project
-    - GHC_VERSION: 9.0.2
-      CABAL_PROJECT: cabal-ghc90.project
-
-.m1_matrix: &m1_matrix
-  matrix:
-    - GHC_VERSION: 8.10.7
-      CABAL_PROJECT: cabal.project
-
-.arm_matrix: &arm_matrix
-  matrix:
-    - GHC_VERSION: 8.10.7
-      CABAL_PROJECT: cabal.project
-
 
 workflow:
   rules:
@@ -68,10 +47,12 @@ workflow:
 
 build-aarch64-linux-deb10:
   extends: .build
+  before_script:
+    - sudo apt update
+    - sudo apt install -y patchelf
   tags:
     - aarch64-linux
   image: "registry.gitlab.haskell.org/ghc/ci-images/aarch64-linux-deb10:$DOCKER_REV"
-  parallel: *arm_matrix
   variables:
     ADD_CABAL_ARGS: ""
 
@@ -90,10 +71,12 @@ tar-aarch64-linux-deb10:
 
 build-armv7-linux-deb10:
   extends: .build
+  before_script:
+    - sudo apt update
+    - sudo apt install -y patchelf
   tags:
     - armv7-linux
   image: "registry.gitlab.haskell.org/ghc/ci-images/armv7-linux-deb10:$DOCKER_REV"
-  parallel: *arm_matrix
   variables:
     ADD_CABAL_ARGS: ""
 
@@ -112,10 +95,12 @@ tar-armv7-linux-deb10:
 
 build-x86_64-linux:
   extends: .build
+  before_script:
+    - sudo apt update
+    - sudo apt install -y patchelf
   tags:
     - x86_64-linux
   image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb10:$DOCKER_REV"
-  parallel: *default_matrix
   variables:
     ADD_CABAL_ARGS: "--enable-split-sections"
 
@@ -138,8 +123,7 @@ build-x86_64-linux-alpine:
     - x86_64-linux
   image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-alpine3_12:$DOCKER_REV"
   before_script:
-    - sudo apk add --no-cache zlib zlib-dev zlib-static bzip2 bzip2-dev bzip2-static gmp gmp-dev xz xz-dev ncurses-static
-  parallel: *default_matrix
+    - sudo apk add --no-cache zlib zlib-dev zlib-static bzip2 bzip2-dev bzip2-static gmp gmp-dev xz xz-dev ncurses-static patchelf findutils
   variables:
     ADD_CABAL_ARGS: "--enable-split-sections --enable-executable-static"
 
@@ -158,9 +142,10 @@ tar-x86_64-linux-alpine:
 
 build-x86_64-freebsd12:
   extends: .build
+  before_script:
+    - sudo pkg install --yes patchelf gmake
   tags:
     - x86_64-freebsd12
-  parallel: *freebsd_matrix
   variables:
     ADD_CABAL_ARGS: "--enable-split-sections -j1"
 
@@ -180,10 +165,9 @@ build-x86_64-freebsd13:
   extends: .build
   tags:
     - x86_64-freebsd13
-  parallel: *freebsd_matrix
   before_script:
     - sudo pkg update
-    - sudo pkg install --yes compat12x-amd64
+    - sudo pkg install --yes compat12x-amd64 patchelf gmake
     - sudo ln -s libncurses.so.6 /usr/local/lib/libncurses.so.6.2
   variables:
     ADD_CABAL_ARGS: "--enable-split-sections -j1"
@@ -204,7 +188,6 @@ build-x86_64-darwin:
   extends: .build
   tags:
     - x86_64-darwin
-  parallel: *default_matrix
   variables:
     ADD_CABAL_ARGS: ""
 
@@ -258,7 +241,6 @@ build-aarch64-darwin:
   variables:
     MACOSX_DEPLOYMENT_TARGET: "10.7"
     ADD_CABAL_ARGS: ""
-  parallel: *m1_matrix
 
 tar-aarch64-darwin:
   extends: .artifacts
@@ -276,7 +258,7 @@ build-x86_64-windows:
   extends: .build
   tags:
     - new-x86_64-windows
-  parallel: *default_matrix
+  parallel: *windows_matrix
   script:
     - $env:CHERE_INVOKING = "yes"
     - bash '-lc' "ADD_CABAL_ARGS=$env:ADD_CABAL_ARGS GHC_VERSION=$env:GHC_VERSION CABAL_INSTALL_VERSION=$CABAL_INSTALL_VERSION .gitlab/ci.sh"
