--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,6 @@ workflow:
     - bash .gitlab/ci.sh
 
 .test:
-  extends: .artifacts:short
   stage: test
   script:
     - bash .gitlab/test.sh
@@ -78,7 +77,7 @@ tar-aarch64-linux-deb10:
   script:
     - ./.gitlab/tar.sh
   variables:
-    TARBALL_ARCHIVE_SUFFIX: Linux-aarch64
+    TARBALL_ARCHIVE_SUFFIX: aarch64-deb10-linux
     TARBALL_EXT: tar.xz
 
 test-aarch64-linux-deb10:
@@ -114,7 +113,7 @@ tar-armv7-linux-deb10:
   script:
     - ./.gitlab/tar.sh
   variables:
-    TARBALL_ARCHIVE_SUFFIX: Linux-armv7
+    TARBALL_ARCHIVE_SUFFIX: armv7-deb10-linux
     TARBALL_EXT: tar.xz
 
 test-armv7-linux-deb10:
@@ -150,7 +149,7 @@ tar-x86_64-linux:
   script:
     - ./.gitlab/tar.sh
   variables:
-    TARBALL_ARCHIVE_SUFFIX: Linux-x86_64
+    TARBALL_ARCHIVE_SUFFIX: x86_64-deb10-linux
     TARBALL_EXT: tar.xz
 
 test-x86_64-linux:
@@ -171,7 +170,7 @@ build-x86_64-linux-alpine:
     - x86_64-linux
   image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-alpine3_12:$DOCKER_REV"
   before_script:
-    - sudo apk add --no-cache zlib zlib-dev zlib-static bzip2 bzip2-dev bzip2-static gmp gmp-dev xz xz-dev ncurses-static patchelf findutils
+    - sudo apk add --no-cache tar zlib zlib-dev zlib-static bzip2 bzip2-dev bzip2-static gmp gmp-dev xz xz-dev ncurses-static patchelf findutils
   variables:
     ADD_CABAL_ARGS: "--enable-split-sections --enable-executable-static"
 
@@ -182,20 +181,22 @@ tar-x86_64-linux-alpine:
   tags:
     - x86_64-linux
   image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-alpine3_12:$DOCKER_REV"
+  before_script:
+    - sudo apk add --no-cache tar zlib zlib-dev zlib-static bzip2 bzip2-dev bzip2-static gmp gmp-dev xz xz-dev ncurses-static
   script:
     - ./.gitlab/tar.sh
   variables:
-    TARBALL_ARCHIVE_SUFFIX: Linux-alpine-x86_64
+    TARBALL_ARCHIVE_SUFFIX: x86_64-alpine3.12-linux
     TARBALL_EXT: tar.xz
 
-tar-x86_64-linux-alpine:
+test-x86_64-linux-alpine:
   extends: .test
   needs: ["tar-x86_64-linux-alpine"]
   tags:
     - x86_64-linux
   image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-alpine3_12:$DOCKER_REV"
   before_script:
-    - sudo apk add --no-cache zlib zlib-dev zlib-static bzip2 bzip2-dev bzip2-static gmp gmp-dev xz xz-dev ncurses-static
+    - sudo apk add --no-cache tar zlib zlib-dev zlib-static bzip2 bzip2-dev bzip2-static gmp gmp-dev xz xz-dev ncurses-static
 
 
 ######################
@@ -220,7 +221,7 @@ tar-x86_64-freebsd12:
   script:
     - ./.gitlab/tar.sh
   variables:
-    TARBALL_ARCHIVE_SUFFIX: FreeBSD12-x86_64
+    TARBALL_ARCHIVE_SUFFIX: x86_64-unknown-freebsd12
     TARBALL_EXT: tar.xz
 
 test-x86_64-freebsd12:
@@ -256,7 +257,7 @@ tar-x86_64-freebsd13:
   script:
     - ./.gitlab/tar.sh
   variables:
-    TARBALL_ARCHIVE_SUFFIX: FreeBSD13-x86_64
+    TARBALL_ARCHIVE_SUFFIX: x86_64-unknown-freebsd13
     TARBALL_EXT: tar.xz
 
 test-x86_64-freebsd13:
@@ -280,6 +281,25 @@ build-x86_64-darwin:
     - x86_64-darwin
   variables:
     ADD_CABAL_ARGS: ""
+  before_script:
+    # Install brew locally in the project dir. Packages will also be installed here.
+    - '[ -e "$CI_PROJECT_DIR/.brew" ] || git clone --depth=1 https://github.com/Homebrew/brew $CI_PROJECT_DIR/.brew'
+    - export PATH="$CI_PROJECT_DIR/.brew/bin:$CI_PROJECT_DIR/.brew/sbin:$PATH"
+
+    # make sure to not pollute the machine with temp files etc
+    - mkdir -p $CI_PROJECT_DIR/.brew_cache
+    - export HOMEBREW_CACHE=$CI_PROJECT_DIR/.brew_cache
+    - mkdir -p $CI_PROJECT_DIR/.brew_logs
+    - export HOMEBREW_LOGS=$CI_PROJECT_DIR/.brew_logs
+    - mkdir -p /private/tmp/.brew_tmp
+    - export HOMEBREW_TEMP=/private/tmp/.brew_tmp
+
+    # update and install packages
+    - brew update
+    - brew install autoconf automake coreutils make
+  script: |
+    export PATH="$CI_PROJECT_DIR/.brew/bin:$CI_PROJECT_DIR/.brew/sbin:$PATH"
+    /bin/bash ./.gitlab/ci.sh
 
 tar-x86_64-darwin:
   extends: .artifacts
@@ -287,10 +307,27 @@ tar-x86_64-darwin:
   needs: ["build-x86_64-darwin"]
   tags:
     - x86_64-darwin
-  script:
-    - ./.gitlab/tar.sh
+  before_script:
+    # Install brew locally in the project dir. Packages will also be installed here.
+    - '[ -e "$CI_PROJECT_DIR/.brew" ] || git clone --depth=1 https://github.com/Homebrew/brew $CI_PROJECT_DIR/.brew'
+    - export PATH="$CI_PROJECT_DIR/.brew/bin:$CI_PROJECT_DIR/.brew/sbin:$PATH"
+
+    # make sure to not pollute the machine with temp files etc
+    - mkdir -p $CI_PROJECT_DIR/.brew_cache
+    - export HOMEBREW_CACHE=$CI_PROJECT_DIR/.brew_cache
+    - mkdir -p $CI_PROJECT_DIR/.brew_logs
+    - export HOMEBREW_LOGS=$CI_PROJECT_DIR/.brew_logs
+    - mkdir -p /private/tmp/.brew_tmp
+    - export HOMEBREW_TEMP=/private/tmp/.brew_tmp
+
+    # update and install packages
+    - brew update
+    - brew install autoconf automake coreutils make
+  script: |
+    export PATH="$CI_PROJECT_DIR/.brew/bin:$CI_PROJECT_DIR/.brew/sbin:$PATH"
+    /bin/bash ./.gitlab/tar.sh
   variables:
-    TARBALL_ARCHIVE_SUFFIX: macOS-x86_64
+    TARBALL_ARCHIVE_SUFFIX: x86_64-apple-darwin
     TARBALL_EXT: tar.xz
 
 test-x86_64-darwin:
@@ -328,7 +365,7 @@ build-aarch64-darwin:
     # update and install packages
     - brew update
     - brew install llvm
-    - brew install autoconf automake coreutils
+    - brew install autoconf automake coreutils make
   script: |
     export PATH="$CI_PROJECT_DIR/.brew/opt/llvm/bin:$CI_PROJECT_DIR/.brew/bin:$CI_PROJECT_DIR/.brew/sbin:$PATH"
     export CC=$CI_PROJECT_DIR/.brew/opt/llvm/bin/clang
@@ -352,7 +389,7 @@ tar-aarch64-darwin:
   script:
     - arch -arm64 /bin/bash ./.gitlab/tar.sh
   variables:
-    TARBALL_ARCHIVE_SUFFIX: macOS-aarch64
+    TARBALL_ARCHIVE_SUFFIX: aarch64-apple-darwin
     TARBALL_EXT: tar.xz
 
 test-aarch64-darwin:
@@ -417,5 +454,5 @@ tar-x86_64-windows:
     - $env:CHERE_INVOKING = "yes"
     - bash '-lc' "TARBALL_ARCHIVE_SUFFIX=$env:TARBALL_ARCHIVE_SUFFIX TARBALL_EXT=$env:TARBALL_EXT .gitlab/tar.sh"
   variables:
-    TARBALL_ARCHIVE_SUFFIX: Windows-x86_64
+    TARBALL_ARCHIVE_SUFFIX: x86_64-unknown-mingw32
     TARBALL_EXT: zip
