--- a/bindist/GNUmakefile.in
+++ b/bindist/GNUmakefile.in
@@ -28,8 +28,8 @@ install:
 	done
 	for h in $(wildcard haskell-language-server-*.in) ; do \
 		$(SED) -e "s#@@EXE_DIR@@#$(LIBDIR)/haskell-language-server-$(HLS_VERSION)/bin/#" \
-			"$$h" > "$(DESTDIR)$(BINDIR)/$$h" && \
-		$(CHMOD_X) "$(DESTDIR)$(BINDIR)/$$h" ; \
+			"$$h" > "$(DESTDIR)$(BINDIR)/$${h%.in}" && \
+		$(CHMOD_X) "$(DESTDIR)$(BINDIR)/$${h%.in}" ; \
 	done
 	$(LN_S) "`scripts/relpath.sh "$(BINDIR)" "$(LIBDIR)/haskell-language-server-$(HLS_VERSION)/bin/haskell-language-server-wrapper"`" \
 		"$(DESTDIR)$(BINDIR)/haskell-language-server-wrapper"
