--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,7 +128,7 @@ test-armv7-linux-deb10:
 # x86_64 linux deb10
 ######################
 
-build-x86_64-linux:
+build-x86_64-linux-deb10:
   extends: .build
   before_script:
     - sudo apt update
@@ -139,10 +139,10 @@ build-x86_64-linux:
   variables:
     ADD_CABAL_ARGS: "--enable-split-sections"
 
-tar-x86_64-linux:
+tar-x86_64-linux-deb10:
   extends: .artifacts
   stage: tar
-  needs: ["build-x86_64-linux"]
+  needs: ["build-x86_64-linux-deb10"]
   tags:
     - x86_64-linux
   image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb10:$DOCKER_REV"
@@ -152,12 +152,116 @@ tar-x86_64-linux:
     TARBALL_ARCHIVE_SUFFIX: x86_64-deb10-linux
     TARBALL_EXT: tar.xz
 
-test-x86_64-linux:
+test-x86_64-linux-deb10:
   extends: .test
-  needs: ["tar-x86_64-linux"]
+  needs: ["tar-x86_64-linux-deb10"]
   tags:
     - x86_64-linux
   image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb10:$DOCKER_REV"
+
+######################
+# x86_64 linux deb9
+######################
+
+build-x86_64-linux-deb9:
+  extends: .build
+  before_script:
+    - sudo apt update
+    - sudo apt install -y patchelf
+  tags:
+    - x86_64-linux
+  image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb9:$DOCKER_REV"
+  variables:
+    ADD_CABAL_ARGS: "--enable-split-sections"
+
+tar-x86_64-linux-deb9:
+  extends: .artifacts
+  stage: tar
+  needs: ["build-x86_64-linux-deb9"]
+  tags:
+    - x86_64-linux
+  image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb9:$DOCKER_REV"
+  script:
+    - ./.gitlab/tar.sh
+  variables:
+    TARBALL_ARCHIVE_SUFFIX: x86_64-deb9-linux
+    TARBALL_EXT: tar.xz
+
+test-x86_64-linux-deb9:
+  extends: .test
+  needs: ["tar-x86_64-linux-deb9"]
+  tags:
+    - x86_64-linux
+  image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb9:$DOCKER_REV"
+
+######################
+# x86_64 linux centos7
+######################
+
+build-x86_64-linux-centos7:
+  extends: .build
+  before_script:
+    - sudo yum install -y epel-release
+    - sudo yum install -y patchelf
+  tags:
+    - x86_64-linux
+  image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-centos7:$DOCKER_REV"
+  variables:
+    ADD_CABAL_ARGS: "--enable-split-sections"
+
+tar-x86_64-linux-centos7:
+  extends: .artifacts
+  stage: tar
+  needs: ["build-x86_64-linux-centos7"]
+  tags:
+    - x86_64-linux
+  image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-centos7:$DOCKER_REV"
+  script:
+    - ./.gitlab/tar.sh
+  variables:
+    TARBALL_ARCHIVE_SUFFIX: x86_64-centos7-linux
+    TARBALL_EXT: tar.xz
+
+test-x86_64-linux-centos7:
+  extends: .test
+  needs: ["tar-x86_64-linux-centos7"]
+  tags:
+    - x86_64-linux
+  image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-centos7:$DOCKER_REV"
+
+######################
+# x86_64 linux fedora27
+######################
+
+build-x86_64-linux-fedora27:
+  extends: .build
+  before_script:
+    - sudo dnf install -y patchelf
+  tags:
+    - x86_64-linux
+  image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-fedora27:$DOCKER_REV"
+  variables:
+    ADD_CABAL_ARGS: "--enable-split-sections"
+
+tar-x86_64-linux-fedora27:
+  extends: .artifacts
+  stage: tar
+  needs: ["build-x86_64-linux-fedora27"]
+  tags:
+    - x86_64-linux
+  image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-fedora27:$DOCKER_REV"
+  script:
+    - ./.gitlab/tar.sh
+  variables:
+    TARBALL_ARCHIVE_SUFFIX: x86_64-fedora27-linux
+    TARBALL_EXT: tar.xz
+
+test-x86_64-linux-fedora27:
+  extends: .test
+  needs: ["tar-x86_64-linux-fedora27"]
+  tags:
+    - x86_64-linux
+  image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-fedora27:$DOCKER_REV"
 
 
 ######################
