--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ test/testdata/**/hie.yaml
 .shake/
 
 # pre-commit-hook.nix
-.pre-commit-config.yaml
+#.pre-commit-config.yaml
 
 # direnv
 /.direnv/
