--- a/bindist/wrapper.in
+++ b/bindist/wrapper.in
@@ -6,37 +6,50 @@ GHC_VERSION="@@GHC_VERSION@@"
 ABI_HASHES="@@ABI_HASHES@@"
 
 debug_msg() {
-	if [ -n "$HLS_WRAPPER_DEBUG" ] ; then
-		echo >&2 "$1"
-	fi
+    if [ -n "$HLS_WRAPPER_DEBUG" ] ; then
+        (>&2 printf "\\033[0;34m%s\\033[0m\\n" "$1")
+    fi
+}
+
+err_msg() {
+    if [ -n "$HLS_WRAPPER_DEBUG" ] ; then
+        (>&2 printf "\\033[0;31m%s\\033[0m\\n" "$1")
+	elif [ -n "$HLS_WRAPPER_VERBOSE" ] ; then
+        (>&2 printf "\\033[0;31m%s\\033[0m\\n" "$1")
+    fi
+}
+
+instruction_msg() {
+	(>&2 printf "\\033[0;35m%s\\033[0m\\n" "$1")
+}
+
+err_fix() {
+	instruction_msg ""
+	instruction_msg "Consider installing ghc-${GHC_VERSION} via ghcup"
+	instruction_msg "or build HLS from source."
 }
 
 err_ghc_pkg() {
-	debug_msg >&2 "Could not find a ghc-pkg binary (found: $1)!"
-	debug_msg >&2 "Trying other methods..."
+	err_msg "Could not find a ghc-pkg binary (found: $1)!"
 }
 
 err_abi() {
-	debug_msg >&2 "GHC ABIs don't match!"
-	debug_msg >&2 ""
-	debug_msg >&2 "Expected: ${ABI_HASHES}"
-	debug_msg >&2 "Got:      $1"
-	debug_msg >&2 "Trying other methods..."
+	err_msg "GHC ABIs don't match!"
+	err_msg ""
+	err_msg "Expected: ${ABI_HASHES}"
+	err_msg "Got:      $1"
 }
 
 err_ver() {
-	debug_msg >&2 "GHC versions don't match!"
-	debug_msg >&2 ""
-	debug_msg >&2 "Expected: ${GHC_VERSION}"
-	debug_msg >&2 "Got:      $1"
-	debug_msg >&2 "Trying other methods..."
+	err_msg "GHC versions don't match!"
+	err_msg ""
+	err_msg "Expected: ${GHC_VERSION}"
+	err_msg "Got:      $1"
 }
 
 # Check the version of GHC and the ABI.
 check_ghc() {
-	{ [ -z "$1" ] || [ -z "$2" ] || [ -z "$3" ] || [ -z "$4" ] ;} && debug_msg "internal error: not enough arguments to check_ghc: 1:$1,2:$2,3:$3,4:$4" && return 4
-
-	debug_msg >&2 "Trying method $4"
+	{ [ -z "$1" ] || [ -z "$2" ] || [ -z "$3" ] ;} && debug_msg "internal error: not enough arguments to check_ghc: 1:$1,2:$2,3:$3" && return 4
 
 	check_ghc_libdir=$1
 	check_ghc_bin=$2
@@ -92,45 +105,47 @@ infer_ghc_pkg() {
 # try GHC_LIBDIR from the environment (e.g. user set it, or haskell-language-server-wrapper)
 if [ -n "${GHC_LIBDIR}" ] &&
 	[ -n "${GHC_BIN}" ] &&
-	check_ghc "${GHC_LIBDIR}" "${GHC_BIN}" "$(infer_ghc_pkg "${GHC_BIN}")" "GHC_LIBDIR and GHC_BIN from env"
+	{ debug_msg "Trying method: GHC_LIBDIR and GHC_BIN from env" ; HLS_WRAPPER_VERBOSE=1 ; check_ghc "${GHC_LIBDIR}" "${GHC_BIN}" "$(infer_ghc_pkg "${GHC_BIN}")" || { err_fix ; exit 1 ; } ; }
 then
 	:
 # try GHC_BIN from the environment (e.g. user set it)
 elif [ -n "${GHC_BIN}" ] &&
 	GHC_LIBDIR="$("${GHC_BIN}" --print-libdir)" &&
-	check_ghc "${GHC_LIBDIR}" "${GHC_BIN}" "$(infer_ghc_pkg "${GHC_BIN}")" "GHC_BIN from env"
+	{ debug_msg "Trying method: GHC_BIN from env" ; HLS_WRAPPER_VERBOSE=1 ; check_ghc "${GHC_LIBDIR}" "${GHC_BIN}" "$(infer_ghc_pkg "${GHC_BIN}")" || { err_fix ; exit 2 ; } ; }
 then
 	:
 # try ghcup
 elif command -v ghcup >/dev/null &&
 	GHC_BIN="$(ghcup whereis ghc "${GHC_VERSION}")" &&
 	GHC_LIBDIR="$("${GHC_BIN}" --print-libdir)" &&
-	check_ghc "${GHC_LIBDIR}" "${GHC_BIN}" "$(infer_ghc_pkg "${GHC_BIN}")" "ghcup"
+	{ debug_msg "Trying method: ghcup" ; check_ghc "${GHC_LIBDIR}" "${GHC_BIN}" "$(infer_ghc_pkg "${GHC_BIN}")" ; }
 then
 	:
 # try ghc-${GHC_VERSION}
 elif command -v ghc-${GHC_VERSION} >/dev/null &&
 	GHC_LIBDIR="$("ghc-${GHC_VERSION}" --print-libdir)" &&
-	check_ghc "${GHC_LIBDIR}" "ghc-${GHC_VERSION}" "$(infer_ghc_pkg "ghc-${GHC_VERSION}")" "ghc-${GHC_VERSION} in PATH"
+	{ debug_msg "Trying method: ghc-${GHC_VERSION} in PATH" ; check_ghc "${GHC_LIBDIR}" "ghc-${GHC_VERSION}" "$(infer_ghc_pkg "ghc-${GHC_VERSION}")" ; }
 then
 	:
 # try ghc
 elif command -v ghc >/dev/null &&
 	GHC_LIBDIR="$(ghc --print-libdir)" &&
-	check_ghc "${GHC_LIBDIR}" "ghc" "$(infer_ghc_pkg "ghc")" "ghc in PATH"
+	{ debug_msg "Trying method: ghc in PATH" ; check_ghc "${GHC_LIBDIR}" "ghc" "$(infer_ghc_pkg "ghc")" ; }
 then
 	:
 # try stack
 elif command -v stack >/dev/null &&
 	GHC_BIN="$(cd "$(mktemp -d)" && stack --no-system-ghc --no-install-ghc --resolver "ghc-${GHC_VERSION}" exec sh -- -c 'command -v ghc')" &&
 	GHC_LIBDIR="$("${GHC_BIN}" --print-libdir)" &&
-	check_ghc "${GHC_LIBDIR}" "${GHC_BIN}" "$(infer_ghc_pkg "${GHC_BIN}")" "stack"
+	{ debug_msg "Trying method: stack" ; check_ghc "${GHC_LIBDIR}" "${GHC_BIN}" "$(infer_ghc_pkg "${GHC_BIN}")" ; }
 then
 	:
 else
-	echo >&2 "All methods exhausted!"
-	echo >&2 "Couldn't find a working/matching GHC installation"
-	echo >&2 "exiting..."
+	HLS_WRAPPER_VERBOSE=1
+	err_msg "All methods exhausted!"
+	err_msg "Couldn't find a working/matching GHC installation"
+	err_fix
+	err_msg "exiting..."
 	exit 42
 fi
 
@@ -140,18 +155,22 @@ case "$(uname -s)" in
 	"Darwin"|"darwin")
 		if [ -n "$DYLD_LIBRARY_PATH" ] ; then
 			DYLD_LIBRARY_PATH="$(for i in "${GHC_LIBDIR}"/* ; do [ -d "$i" ] && printf "%s" "$i:" ; done)$DYLD_LIBRARY_PATH"
+			debug_msg "Exporting DYLD_LIBRARY_PATH=${DYLD_LIBRARY_PATH}"
 			export DYLD_LIBRARY_PATH
 		else
 			DYLD_LIBRARY_PATH="$(for i in "${GHC_LIBDIR}"/* ; do [ -d "$i" ] && printf "%s" "$i:" ; done | sed 's/:$//')"
+			debug_msg "Exporting DYLD_LIBRARY_PATH=${DYLD_LIBRARY_PATH}"
 			export DYLD_LIBRARY_PATH
 		fi
 		;;
 	*)
 		if [ -n "$LD_LIBRARY_PATH" ] ; then
 			LD_LIBRARY_PATH="$(for i in "${GHC_LIBDIR}"/* ; do [ -d "$i" ] && printf "%s" "$i:" ; done)$LD_LIBRARY_PATH"
+			debug_msg "Exporting LD_LIBRARY_PATH=${LD_LIBRARY_PATH}"
 			export LD_LIBRARY_PATH
 		else
 			LD_LIBRARY_PATH="$(for i in "${GHC_LIBDIR}"/* ; do [ -d "$i" ] && printf "%s" "$i:" ; done | sed 's/:$//')"
+			debug_msg "Exporting LD_LIBRARY_PATH=${LD_LIBRARY_PATH}"
 			export LD_LIBRARY_PATH
 		fi
 		;;
