--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -103,15 +103,15 @@ jobs:
         authToken: ${{ secrets.HLS_CACHIX_AUTH_TOKEN }}
     - name: Build development shell
       run: nix develop --print-build-logs --profile dev
-    - name: Build development shell (GHC 9.0.1)
-      run: nix develop --print-build-logs .#haskell-language-server-901-dev --profile dev
+    - name: Build all development shell
+      run: nix develop --print-build-logs .#all-dev-shells --profile dev
     - name: Push development shell
       if: ${{ env.HAS_TOKEN == 'true' }}
       run: cachix push haskell-language-server dev
     - name: Build binaries
       run: nix build --print-build-logs
-    - name: Build binaries (GHC 9.0.1)
-      run: nix build --print-build-logs .#haskell-language-server-901
+    - name: Build all binaries
+      run: nix build --print-build-logs all-haskell-language-server
     - name: Push binaries
       if: ${{ env.HAS_TOKEN == 'true' }}
       run: nix path-info --json | jq -r '.[].path' | cachix push haskell-language-server
