--- a/cabal-ghc921.project
+++ b/cabal-ghc921.project
@@ -27,6 +27,7 @@ packages:
          ./plugins/hls-call-hierarchy-plugin
          ./plugins/hls-alternate-number-format-plugin
          ./plugins/hls-selection-range-plugin
+         ./plugins/hls-change-type-signature-plugin
 
 with-compiler: ghc-9.2.1
 
