--- a/cabal.project
+++ b/cabal.project
@@ -27,6 +27,7 @@ packages:
          ./plugins/hls-alternate-number-format-plugin
          ./plugins/hls-qualify-imported-names-plugin
          ./plugins/hls-selection-range-plugin
+         ./plugins/hls-change-type-signature-plugin
 
 -- Standard location for temporary packages needed for particular environments
 -- For example it is used in the project gitlab mirror to help in the MAcOS M1 build script
